Se elimina paquete Microsoft.IdentityModel.Tokens que causaba problemas al validar JWT y ya funciona la autenticación
